--- a/single-price-grid-component-master/style.css
+++ b/single-price-grid-component-master/style.css
@@ -1,66 +1,67 @@
-* {
+html {
+    font-family: 'Karla', sans-serif;
     font-size: 16px;
 }
 
-body {
-    width: 1440px;
-    border-color: black;
-    margin: auto;
+* {
+    margin: 0;
     padding: 0;
-    background-color: lightgrey;
-    font-family: 'Karla', sans-serif;
-    line-height: 1.3;
+    box-sizing: border-box;
+}
+
+section {
+    background-color: hsl(204, 43%, 93%);
+    min-height: 100vh; 
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 100px 30px;
+}
+
+.container {
+    display: grid;
+    grid-template-columns: 100%;
+    max-width: 550px;
+    margin: 0 auto;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 0px 14px 1px #00000024;
+}
+
+.block {
+    padding: 30px;
 }
 
 .block1 {
-    width: 40%;
-    border-radius: 5px;
-    margin-top: 10%;
-    margin-left: 25%;
     background-color: white;
-    padding: 20px 50px;
+}
+
+.block1 h2 {
+    color: hsl(179, 62%, 43%);
+    margin-bottom: 25px;
+}
+
+.block1 h3 {
+    color: hsl(71, 73%, 54%);
+    margin-bottom: 20px;
 }
 
 .block1 p {
-    color: lightgrey;
-}
-
-.rowTwo {  
-    width: 40%;
-    
+    color: hsl(218, 22%, 67%);
 }
 
 .block2{
-    background-color: hsl(179, 62%, 43%);
-    width: 20%;
-    border-radius: 5px;
-    display: inline-block;
-    padding: 20px 50px;
-    
+    background-color: hsl(179, 62%, 43%);  
 }
 
 .block3 {
     border-radius: 5px;
-    width: 20%;
+
     background-color: hsl(179, 68%, 52%);
-    display: inline-block;
-    padding: 20px 50px;
+
     
 }   
-
-h1 {
-    color: hsl(179, 62%, 43%);
-    font-size: 24px;
-}
-
-h2 {
-    color: hsl(71, 73%, 54%);
-    font-size: 18px;
-}
-
-h3 {
-    color: white;
-}
 
 /* Footer */
 .attribution {
