--- a/single-price-grid-component-master/style.css
+++ b/single-price-grid-component-master/style.css
@@ -39,29 +39,77 @@ section {
 
 .block1 h2 {
     color: hsl(179, 62%, 43%);
-    margin-bottom: 25px;
+    font-weight: 700;
+    font-size: 1.3rem;
+    margin-bottom: 15px;
 }
 
 .block1 h3 {
     color: hsl(71, 73%, 54%);
-    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 1rem;
+    margin-bottom: 15px;
 }
 
 .block1 p {
     color: hsl(218, 22%, 67%);
+    font-size: 1rem;
+    line-height: 1.5rem;
 }
 
 .block2{
     background-color: hsl(179, 62%, 43%);  
 }
 
+.block2 h3{
+    color: white;
+    font-weight: 700;
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+}
+
+.block2 p{
+    color: hsl(204, 43%, 93%);
+    font-size: 1rem;
+    font-weight: 400;
+    margin-bottom: 10px;
+}
+
+.block2 p span{
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+
+.block2 .button{
+    text-align: center;
+    width: 100%;
+    padding: 15px;
+    background-color: hsl(71, 73%, 54%);
+    display: inline-block;
+    color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+    margin-top: 30px;
+    font-weight: 700;
+    box-shadow: 0px 4px 10px 1px #00000033;
+    border-radius: 8px;
+}
+
 .block3 {
-    border-radius: 5px;
-
-    background-color: hsl(179, 68%, 52%);
-
-    
+    background-color: #4abebd;
 }   
+
+.block3 h3{
+    color: white;
+    font-weight: 700;
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+}
+
+.block3 p{
+    color: hsl(204, 43%, 93%);
+    line-height: 1.5rem;
+}
 
 /* Footer */
 .attribution {
@@ -70,5 +118,17 @@ section {
     
 .attribution a {
     color: hsl(228, 45%, 44%); 
+}
+
+@media only screen and (min-width: 768px){
+    .container{
+        grid-template-columns: 50% 50%;
+    }
+    .block1{
+        grid-area: 1/ 1/ 2/ 3;
+    }
+    .block2, .block3{
+        grid-row: 2;
+    }
 }
 
